force-app/main/default/objects/Contact/fields/Account_Description__c.field-meta.xml
<CustomField>
    <fullName>Account_Description__c</fullName>
    <label>Account Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>