force-app/main/default/objects/Contact/fields/Additional_Direction__c.field-meta.xml
<CustomField>
    <fullName>Additional_Direction__c</fullName>
    <label>Additional Direction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>