force-app/main/default/objects/Contact/fields/Operating_Address__c.field-meta.xml
<CustomField>
    <fullName>Operating_Address__c</fullName>
    <label>Operating Address</label>
    <type>TextArea</type>
</CustomField>