force-app/main/default/objects/Contact/fields/Place_Location__c.field-meta.xml
<CustomField>
    <fullName>Place_Location__c</fullName>
    <label>Place Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>